--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -1,7 +1,10 @@
 .ItemListContainer{
     background-image: url("../../assets/indeximg1.jpg");
     background-size: cover;
-    opacity: 0.5;
+    opacity: 0.8;
     width: 100%;
     height: 100vh;
+}
+h2{
+    color: white;
 }
