--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -1,7 +1,7 @@
 .ItemListContainer{
     background-image: url("../../assets/indeximg1.jpg");
     background-size: cover;
-    opacity: 0.8;
+    /* opacity: 0.8; */
     width: 100%;
     height: 100vh;
 }
